[package]
name = "spl-c-tokens-prototype"
version = "0.1.0"
authors = ["samkim <skim13@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.5.0"
thiserror = "1.0.21"
curve25519-dalek = "2"
arrayref = "0.3"
rand_core = "0.5"
bulletproofs = "2"
merlin = "2"
sha3 = "0.8"

[lib]
crate-type = ["cdylib", "lib"]
