[package]
name = "spl-c-tokens-prototype"
version = "0.1.0"
authors = ["samkim <skim13@cs.stanford.edu>"]
edition = "2018"

[dependencies]
solana-program = "1.6.10"
thiserror = "1.0.21"
curve25519-dalek = "2"
arrayref = "0.3"
rand_core = "0.5"
# bulletproofs = "2"
# merlin = "2"
sha3 = "0.8"
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-sdk = "1.6.10"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
