[package]
name = "spl-c-tokens-prototype"
version = "0.1.0"
authors = ["samkim <skim13@cs.stanford.edu>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.6.7"
borsh = "0.8"
borsh-derive = "0.8.1"
thiserror = "1.0"
curve25519-dalek = "2"
arrayref = "0.3"

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"
proptest = "0.10"
rand_core = "0.5"
curve25519-dalek = "2"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false


